objects/MasterdataCodeToNameMapping__c.object
<CustomObject>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>ProductGroup</label>
        <picklist>
            <picklistValues>
                <fullName>1339</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1723</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1728</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1730</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2106</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2108</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2111</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2115</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2127</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2128</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2129</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2132</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2214</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2215</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2222</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2226</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2228</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2401</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2408</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2409</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2413</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2425</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2451</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2480</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2617</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2657</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2699</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2802</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2851</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2861</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceCategoryLevel1__c</fullName>
        <label>ServiceCategoryLevel1</label>
        <picklist>
            <picklistValues>
                <fullName>S01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S52</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S57</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S61</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S65</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S85</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceCategoryLevel2__c</fullName>
        <label>ServiceCategoryLevel2</label>
        <picklist>
            <picklistValues>
                <fullName>S03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S34</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S36</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S37</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S38</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S39</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S43</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S44</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S46</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S47</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S48</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S50</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Masterdata Code To Name Mapping</label>
    <nameField>
        <displayFormat>MCTNM{000000}</displayFormat>
        <label>Masterdata English Translations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Masterdata Code To Name Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>